# deepferry

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  claude_desktop_config.example.json  config.docker.toml  config.example.toml  dev.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
design/: capabilities-scenarios.html  prototypes.html
docker/mysql-init/: V001__deepferry_test_data.sql  V002__finance_ledger.sql
examples/: config.example.custom.toml  config.example.orchestrated.toml  custom_datasource.py
examples/financial-ledger-mock/: .dockerignore  Dockerfile  README.md  config.deepferry.toml.example  docker-compose.yml  mvnw  mvnw.cmd  pom.xml  settings-docker.xml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: agents.ts  client.ts  datasets.ts  explore.ts  saved-queries.ts  types.ts  ws.ts
frontend/src/components/: ActivityFeed.tsx  AutoChart.tsx  CommandPalette.tsx  CreateDatasetModal.tsx  DataSourceSelector.tsx  DiffView.tsx  EmptyState.tsx  ErrorBanner.tsx  ExecutionDetail.tsx  ExecutionDetailPanel.tsx  ExploreError.tsx  ExploreProgress.tsx  ExploreResult.tsx  FeedFilters.tsx  LoadingSpinner.tsx  NLInput.tsx  QueryEditor.tsx  QueryHistory.tsx  ResultGrid.tsx  ResultTabs.tsx  SaveQueryModal.tsx  SchemaPanel.tsx  Sidebar.tsx  SpanTree.tsx  StatsCards.tsx  StatusBar.tsx
frontend/src/context/: QueryContext.tsx
frontend/src/hooks/: useHistory.ts  useSidecarHealth.ts  useSources.ts
frontend/src/pages/: DatasetDetailPage.tsx  ExecutionPage.tsx  ExplorePage.tsx  HistoryPage.tsx  MonitorPage.tsx  QueryPage.tsx  ResultsPage.tsx
frontend/src/store/: shell.ts
frontend/src/styles/: ag-grid-theme.ts
openspec/: project.md
openspec/changes/console-redesign/: tasks-backend.md  tasks-frontend.md
openspec/changes/mvp-init/: design.md  proposal.md  tasks.md
openspec/changes/orchestration-audit/: design.md  proposal.md  tasks.md
openspec/specs/: agent-monitor.md  audit-trace.md  config-panel.md  console-prototype.html  console-redesign-plan.md  console-redesign.md  console-shell.md  cross-source-ui.md  custom-datasource.md  dataset-engine.md  dataset-ui.md  datasource-abstraction.md  desktop-app.md  duckdb-cross-source.md  explore-mode.md  http-api-datasource.md  llm-integration.md  mcp-server.md  orchestration.md  query-enhancement.md  sql-datasource.md  two-step-auth.md
src/deepferry/: __init__.py  cli.py  config.py
tests/: test_agents_api.py  test_auth.py  test_dataset_core.py  test_datasets_api.py  test_diagnostics.py  test_duckdb.py  test_e2e.py  test_explore.py  test_http_api.py  test_llm.py  test_llm_guard.py  test_mysql.py  test_orchestrated.py  test_postgresql.py  test_prompts.py  test_query_analyze.py  test_registry.py  test_safeguards.py  test_saved_queries.py  test_scenario.py  test_schema_relationships.py  test_trace.py  test_web.py  test_ws.py
(+80 files in other folders)
