[project]
name = "deepferry"
version = "0.1.0"
description = "MCP-based universal data access layer for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "caiyfa" }
]
keywords = ["mcp", "llm", "data-access", "mysql", "postgresql", "http-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.27,<2",
    "fastapi[standard]>=0.138,<1",
    "uvicorn[standard]>=0.49,<1",
    "pydantic>=2.13,<3",
    "asyncmy>=0.2.11,<1",
    "asyncpg>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0.51,<3",
    "duckdb>=1.5.4,<2",
    "httpx2[http2]>=2.4,<3",
    "authlib>=1.7.2,<2",
    "pyjwt>=2.13,<3",
    "openai>=2.43,<3",
    "aiosqlite>=0.21,<1",
    "tomli>=2; python_version < '3.11'",
]

[project.scripts]
deepferry = "deepferry.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-xdist>=3,<4",
    "mypy>=1,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["deepferry"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "asyncmy.*",
    "asyncpg.*",
    "aiosqlite.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests that require Docker services (deselect with '-m \"not integration\"')",
    "slow: marks slow-running tests",
]

[tool.coverage.run]
source = ["src/deepferry"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.19",
]
